updates to content

--- a/about.html
+++ b/about.html
@@ -14,10 +14,8 @@
 
 	<meta name="viewport" content="width=device-width">
 	
-	<meta name="description" content="Designa Studio, a HTML5 / CSS3 template.">
-	<meta name="author" content="Sylvain Lafitte, Web Designer, sylvainlafitte.com">
 	
-	<title>ABOUT // Designa Studio</title>
+	<title>RESUME // Colin Gerber</title>
 	
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 	<link rel="shortcut icon" type="image/png" href="favicon.png">
@@ -37,13 +35,15 @@
 
 	<header id="navtop">
 		<a href="index.html" class="logo fleft">
-			<img src="img/logo.png" alt="Designa Studio">
+			<span id="nameheader">Colin Gerber</span>
+            <!-- Ues for logo -->
+			<!-- <img src="img/logo.png" alt="Designa Studio"> -->
 		</a>
 		
 		<nav class="fright">
 			<ul>
 				<li><a href="index.html">Home</a></li>
-				<li><a href="about.html" class="navactive">About</a></li>
+				<li><a href="about.html" class="navactive">Resume</a></li>
 			</ul>
 			<ul>
 				<li><a href="works.html">Works</a></li>
