--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
 		     <div class="slides">
 		       <div class="slide">
 		           	<figure>
-		                 <img src="img/img2.jpg" alt="">
+		                 <img src="img/DC_Bike_Share_Chord_Chart.jpg" alt="">
 		                 <figcaption>
 		                 	<div>
-		                 	<h5>Caption 1</h5>
-		                 	<p>Lorem ipsum dolor set amet, lorem, <a href="#">link text</a></p>
+		                 	<h5>Data Visualization</h5>
+		                 	<p>A chord chart of interaction between NE DC Bike Share stations.<a href="#">link text</a></p>
 		                 	</div>
 		                 </figcaption>
 		             	</figure>
@@ -95,11 +95,11 @@
 		           
 		           <div class="slide">
 		               	<figure>
-		                     <img src="img/img.jpg" alt="">
+		                     <img src="img/Nuclear_Forensics_Thumb.png" alt="">
 		                     <figcaption>
 		                     	<div>
-		                     	<h5>Caption 2</h5>
-		                     	<p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+		                     	<h5>Nuclear Forensics</h5>
+		                     	<p>A Python program to match unknown nuclear fuel cells to know nuclear reactors.</p>
 		                     	</div>
 		                     </figcaption>
 		                 	</figure>
@@ -156,7 +156,7 @@
 
 			<figure class="grid col-one-quarter mq2-col-one-half">
 				<a href="#">
-				<img src="img/img.jpg" alt="">
+				<img src="img/Nuclear_Forensics_Thumb.png" alt="">
 				<span class="zoom"></span>
 				</a>
 				<figcaption>
@@ -167,7 +167,7 @@
 		
 			<figure class="grid col-one-quarter mq2-col-one-half">
 				<a href="#">
-				<img src="img/img.jpg" alt="">
+				<img src="img/DC_Bike_Share_Chord_Chart.jpg" alt="">
 				<span class="zoom"></span>
 				</a>
 				<figcaption>
@@ -197,7 +197,7 @@
     
             <figure class="grid col-one-quarter mq2-col-one-half">
                 <a href="work1.html">
-                <img src="img/img.jpg" alt="">
+                <img src="img/Peace_Corps_Hackathon.png" alt="">
                 <span class="zoom"></span>
                 </a>
                 <figcaption>
