--- a/contact.html
+++ b/contact.html
@@ -14,10 +14,8 @@
 
 	<meta name="viewport" content="width=device-width">
 	
-	<meta name="description" content="Designa Studio, a HTML5 / CSS3 template.">
-	<meta name="author" content="Sylvain Lafitte, Web Designer, sylvainlafitte.com">
 	
-	<title>CONTACT// Designa Studio</title>
+	<title>CONTACT// Colin Gerber</title>
 	
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 	<link rel="shortcut icon" type="image/png" href="favicon.png">
@@ -69,7 +67,7 @@
 		
 		<aside class="grid col-one-quarter mq2-col-one-third mq3-col-full">
 
-			<p class="mbottom">We would love to talk to you and answer all of your questions</p>
+			<p class="mbottom">If you have any questions let me know.</p>
 			
 			<address class="mbottom">
 				<h5>DESIGNA studio </h5>
@@ -97,8 +95,8 @@
 		</aside>
 		
 		<section class="grid col-three-quarters mq2-col-two-thirds mq3-col-full">
-			<h2>Drop us a message</h2>
-			<p class="warning">Don't forget to put your own email address in the php file!</p>
+			<h2>Send me a message</h2>
+			<p class="warning">Include your name, email and message below.</p>
 			
 			<form id="contact_form" class="contact_form" action="contact.php" method="post" name="contact_form">	
 				<ul>
