--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
 
 		<header class="grid col-full">
 		<hr>
-			<p class="fleft">About</p>
+			<p class="fleft">Resume</p>
 		</header>
 
 		
@@ -80,7 +80,7 @@
 		</aside>
 		
 		<section class="grid col-three-quarters mq2-col-full">
-			<img src="img/team.jpg" alt="" >
+			<img src="img/Colin_Gerber_Resume.svg" alt="" class="resume">
 			
 			<article id="navteam">
 			<h2>Our team</h2>
