--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 		     <div class="slides">
 		       <div class="slide">
 		           	<figure>
-		                 <img src="img/DC_Bike_Share_Chord_Chart.jpg" alt="" class="slidethumb">
+		                 <img src="img/DC_Bike_Share_Chord_Chart_Thumb.jpg" alt="" class="slidethumb">
 		                 <figcaption>
 		                 	<div>
 		                 	<h5>Data Visualization</h5>
@@ -179,7 +179,7 @@
 		
 			<figure class="grid col-one-quarter mq2-col-one-half">
 				<a href="#">
-				<img src="img/DC_Bike_Share_Chord_Chart.jpg" alt="" class="thumb">
+				<img src="img/DC_Bike_Share_Chord_Chart_Thumb.jpg" alt="" class="thumb">
 				<span class="zoom"></span>
 				</a>
 				<figcaption>
@@ -190,7 +190,7 @@
 		
 			<figure class="grid col-one-quarter mq2-col-one-half">
 				<a href="#">
-				<img src="img/img.jpg" alt="" class="thumb">
+				<img src="img/Census_Mapper_Thumb.jpg" alt="" class="thumb">
 				<span class="zoom"></span>
 				</a>
 				<figcaption>
@@ -257,6 +257,7 @@
 	<footer class="grid-wrap">
 		<ul class="grid col-one-third social">
 			<li><a href="https://www.linkedin.com/pub/colin-gerber/28/981/999">LinkedIn</a></li>
+            <li><a href="https://github.com/cmgerber">Github</a></li>
             <li><a href="http://www.quora.com/Colin-Gerber">Quora</a></li>
 			<li><a href="https://twitter.com/Cmgerber">Twitter</a></li>
 			<li><a href="https://plus.google.com/+ColinGerber">Google+</a></li>
