added neuroscience projects page

--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
 		</aside>
 		
 		<section class="grid col-three-quarters mq2-col-full">
-			<img src="img/Colin_Gerber_Resume.svg" alt="" class="resume">
+			<img src="img/Colin_Gerber_Resume.png" alt="" class="resume">
 			
 			<article id="navteam">
 			<h2>Our team</h2>
