--- a/index.html
+++ b/index.html
@@ -156,12 +156,12 @@
 		</header>
 	
 			<figure class="grid col-one-quarter mq2-col-one-half">
-				<a href="work1.html">
+				<a href="neuroscience.html">
 				<img src="img/Basal_Ganglia_Diagram_Thumb.svg" alt="" class="thumb">
 				<span class="zoom"></span>
 				</a>
 				<figcaption>
-					<a href="work1.html" class="arrow">Neuroscience</a>
+					<a href="neuroscience.html" class="arrow">Neuroscience</a>
 					<p>Lorem ipsum dolor set amet</p>
 				</figcaption>
 			</figure>
