--- a/work1.html
+++ b/work1.html
@@ -14,10 +14,8 @@
 
 	<meta name="viewport" content="width=device-width">
 	
-	<meta name="description" content="Designa Studio, a HTML5 / CSS3 template.">
-	<meta name="author" content="Sylvain Lafitte, Web Designer, sylvainlafitte.com">
 	
-	<title>PROJECT // Designa Studio</title>
+	<title>PROJECT // Colin Gerber</title>
 	
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 	<link rel="shortcut icon" type="image/png" href="favicon.png">
@@ -39,16 +37,18 @@
 
 	<header id="navtop">
 		<a href="index.html" class="logo fleft">
-			<img src="img/logo.png" alt="Designa Studio">
+			<span id="nameheader">Colin Gerber</span>
+            <!-- Ues for logo -->
+			<!-- <img src="img/logo.png" alt="Designa Studio"> -->
 		</a>
 		
 		<nav class="fright">
 			<ul>
 				<li><a href="index.html">Home</a></li>
-				<li><a href="about.html">About</a></li>
+				<li><a href="about.html">Resume</a></li>
 			</ul>
 			<ul>
-				<li><a href="works.html" class="navactive">Works</a></li>
+				<li><a href="works.html" class="navactive">Portfolio</a></li>
 				<li><a href="services.html">Services</a></li>
 			</ul>
 			<ul>
@@ -124,11 +124,11 @@
 <div class="divide-top">
 	<footer class="grid-wrap">
 		<ul class="grid col-one-third social">
-			<li><a href="#">RSS</a></li>
-			<li><a href="#">Facebook</a></li>
-			<li><a href="#">Twitter</a></li>
-			<li><a href="#">Google+</a></li>
-			<li><a href="#">Flickr</a></li>
+			<li><a href="https://www.linkedin.com/pub/colin-gerber/28/981/999">LinkedIn</a></li>
+            <li><a href="https://github.com/cmgerber">Github</a></li>
+            <li><a href="http://www.quora.com/Colin-Gerber">Quora</a></li>
+			<li><a href="https://twitter.com/Cmgerber">Twitter</a></li>
+			<li><a href="https://plus.google.com/+ColinGerber">Google+</a></li>
 		</ul>
 	
 		<div class="up grid col-one-third ">
@@ -138,8 +138,8 @@
 		<nav class="grid col-one-third ">
 			<ul>
 				<li><a href="index.html">Home</a></li>
-				<li><a href="about.html">About</a></li>
-				<li><a href="works.html">Works</a></li>
+				<li><a href="about.html">Resume</a></li>
+				<li><a href="works.html">Portfolio</a></li>
 				<li><a href="services.html">Services</a></li>
 				<li><a href="blog.html">Blog</a></li>
 				<li><a href="contact.html">Contact</a></li>
