--- a/index.html
+++ b/index.html
@@ -178,12 +178,12 @@
 			</figure>
 		
 			<figure class="grid col-one-quarter mq2-col-one-half">
-				<a href="#">
+				<a href="dataviz.html">
 				<img src="img/DC_Bike_Share_Chord_Chart_Thumb.jpg" alt="" class="thumb">
 				<span class="zoom"></span>
 				</a>
 				<figcaption>
-					<a href="#" class="arrow">Data Visualizations</a>
+					<a href="dataviz.html" class="arrow">Data Visualizations</a>
 					<p>Lorem ipsum dolor set amet</p>
 				</figcaption>
 			</figure>
