--- a/about.html
+++ b/about.html
@@ -111,6 +111,7 @@
 	</div> <!--main-->
 
 <div class="divide-top">
+<p class="fleft">Connect</p>
 <footer class="grid-wrap">
 	<ul class="grid col-one-third social">
 		<li><a href="#">RSS</a></li>
@@ -127,8 +128,8 @@
 	<nav class="grid col-one-third ">
 		<ul>
 			<li><a href="index.html">Home</a></li>
-			<li><a href="about.html">About</a></li>
-			<li><a href="works.html">Works</a></li>
+			<li><a href="about.html">Resume</a></li>
+			<li><a href="works.html">Portfolio</a></li>
 			<li><a href="services.html">Services</a></li>
 			<li><a href="blog.html">Blog</a></li>
 			<li><a href="contact.html">Contact</a></li>
