--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,9 @@
 
 	<header id="navtop">
 		<a href="index.html" class="logo fleft">
-			<img src="img/logo.png" alt="Designa Studio">
+			<span id="nameheader">Colin Gerber</span>
+            <!-- Ues for logo -->
+			<!-- <img src="img/logo.png" alt="Designa Studio"> -->
 		</a>
 		
 		<nav class="fright">
@@ -81,10 +83,11 @@
 				00 77 66 55 33<br >
 				00 77 66 55 33</p>
 			<p class="mbottom">
-				<a href="#">address@email.com</a><br >
-				<a href="#">Designa Studio on Facebook</a><br >
-				<a href="#">@designstudio on Twitter</a><br >
-				<a href="#">Designa Studio on Google+</a>
+				<a href="https://www.linkedin.com/pub/colin-gerber/28/981/999">LinkedIn</a><br>
+	            <a href="https://github.com/cmgerber">Github</a><br>
+	            <a href="http://www.quora.com/Colin-Gerber">Quora</a><br>
+				<a href="https://twitter.com/Cmgerber">Twitter</a><br>
+				<a href="https://plus.google.com/+ColinGerber">Google+</a><br>
 			</p>
 			<p>
 				<h6>Openning hours: </h6>
@@ -122,13 +125,14 @@
 	</div> <!--main-->
 
 <div class="divide-top">
+<p class="fleft">Connect</p>
 <footer class="grid-wrap">
 	<ul class="grid col-one-third social">
-		<li><a href="#">RSS</a></li>
-		<li><a href="#">Facebook</a></li>
-		<li><a href="#">Twitter</a></li>
-		<li><a href="#">Google+</a></li>
-		<li><a href="#">Flickr</a></li>
+		<li><a href="https://www.linkedin.com/pub/colin-gerber/28/981/999">LinkedIn</a></li>
+            <li><a href="https://github.com/cmgerber">Github</a></li>
+            <li><a href="http://www.quora.com/Colin-Gerber">Quora</a></li>
+            <li><a href="https://twitter.com/Cmgerber">Twitter</a></li>
+            <li><a href="https://plus.google.com/+ColinGerber">Google+</a></li>
 	</ul>
 
 	<div class="up grid col-one-third ">
@@ -138,8 +142,8 @@
 	<nav class="grid col-one-third ">
 		<ul>
 			<li><a href="index.html">Home</a></li>
-			<li><a href="about.html">About</a></li>
-			<li><a href="works.html">Works</a></li>
+			<li><a href="about.html">Resume</a></li>
+			<li><a href="works.html">Portfolio</a></li>
 			<li><a href="services.html">Services</a></li>
 			<li><a href="blog.html">Blog</a></li>
 			<li><a href="contact.html">Contact</a></li>
