--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
 	<meta name="viewport" content="width=device-width">
 	
-
+    <meta name="description" content="Colin Gerber's personal website. Resume and portfolio.">
+    <meta name="author" content="Colin Gerber">
 	
 	<title>Colin Gerber</title>
 	
@@ -64,7 +65,7 @@
 		<header class="grid col-full">
 			<hr>
 			<p class="fleft">Home</p>
-			<a href="about.html" class="arrow fright">see my resume</a>
+			<!-- <a href="about.html" class="arrow fright">see my resume</a> -->
 		</header>
 		
 		<div class="grid col-one-half mq2-col-full aboutme">
@@ -254,6 +255,7 @@
 	</div> <!--main-->
 
 <div class="divide-top">
+    <p class="fleft">Connect</p>
 	<footer class="grid-wrap">
 		<ul class="grid col-one-third social">
 			<li><a href="https://www.linkedin.com/pub/colin-gerber/28/981/999">LinkedIn</a></li>
