--- a/work1.html
+++ b/work1.html
@@ -122,6 +122,7 @@
 	</div> <!--main-->
 
 <div class="divide-top">
+	<p class="fleft">Connect</p>
 	<footer class="grid-wrap">
 		<ul class="grid col-one-third social">
 			<li><a href="https://www.linkedin.com/pub/colin-gerber/28/981/999">LinkedIn</a></li>
