add project pages, more changes

--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
 	<meta name="viewport" content="width=device-width">
-	
+
+	<meta name="description" content="Colin Gerber's personal website. Resume and portfolio.">
+    <meta name="author" content="Colin Gerber">
+
 	
 	<title>CONTACT// Colin Gerber</title>
 	
@@ -44,16 +47,16 @@
 		<nav class="fright">
 			<ul>
 				<li><a href="index.html">Home</a></li>
-				<li><a href="about.html">About</a></li>
+				<li><a href="resume.html">Resume</a></li>
 			</ul>
 			<ul>
-				<li><a href="works.html">Works</a></li>
-				<li><a href="services.html">Services</a></li>
+				<li><a href="works.html">Portfolio</a></li>
+				<li><a href="contact.html">Contact</a></li>
 			</ul>
-			<ul>
+			<!-- <ul>
 				<li><a href="blog.html">Blog</a></li>
-				<li><a href="contact.html" class="navactive">Contact</a></li>
-			</ul>
+                <li><a href="services.html">Services</a></li>
+			</ul> -->
 		</nav>
 	</header>
 
@@ -71,7 +74,7 @@
 
 			<p class="mbottom">If you have any questions let me know.</p>
 			
-			<address class="mbottom">
+			<!-- <address class="mbottom">
 				<h5>DESIGNA studio </h5>
 				3615 Fake Street <br >
 				Level 5, Door 123 <br >
@@ -81,7 +84,7 @@
 		
 			<p class="mbottom">
 				00 77 66 55 33<br >
-				00 77 66 55 33</p>
+				00 77 66 55 33</p> -->
 			<p class="mbottom">
 				<a href="https://www.linkedin.com/pub/colin-gerber/28/981/999">LinkedIn</a><br>
 	            <a href="https://github.com/cmgerber">Github</a><br>
@@ -89,11 +92,7 @@
 				<a href="https://twitter.com/Cmgerber">Twitter</a><br>
 				<a href="https://plus.google.com/+ColinGerber">Google+</a><br>
 			</p>
-			<p>
-				<h6>Openning hours: </h6>
-				Monday to Friday <br >
-				09h00 to 17h00
-			</p>
+			
 		
 		</aside>
 		
@@ -142,11 +141,12 @@
 	<nav class="grid col-one-third ">
 		<ul>
 			<li><a href="index.html">Home</a></li>
-			<li><a href="about.html">Resume</a></li>
+			<li><a href="resume.html">Resume</a></li>
 			<li><a href="works.html">Portfolio</a></li>
-			<li><a href="services.html">Services</a></li>
-			<li><a href="blog.html">Blog</a></li>
 			<li><a href="contact.html">Contact</a></li>
+			<!-- <li><a href="services.html">Services</a></li>
+			<li><a href="blog.html">Blog</a></li> -->
+			
 		</ul>
 	</nav>
 </footer>
