--- a/resume.html
+++ b/resume.html
@@ -13,8 +13,11 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
 	<meta name="viewport" content="width=device-width">
-	
-	
+
+	<meta name="description" content="Colin Gerber's personal website. Resume and portfolio.">
+    <meta name="author" content="Colin Gerber">
+
+
 	<title>RESUME // Colin Gerber</title>
 	
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
@@ -43,16 +46,16 @@
 		<nav class="fright">
 			<ul>
 				<li><a href="index.html">Home</a></li>
-				<li><a href="about.html" class="navactive">Resume</a></li>
+				<li><a href="resume.html" class="navactive">Resume</a></li>
 			</ul>
 			<ul>
-				<li><a href="works.html">Works</a></li>
-				<li><a href="services.html">Services</a></li>
-			</ul>
-			<ul>
-				<li><a href="blog.html">Blog</a></li>
+				<li><a href="works.html">Portfolio</a></li>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
+			<!-- <ul>
+				<li><a href="blog.html">Blog</a></li>
+                <li><a href="services.html">Services</a></li>
+			</ul> -->
 		</nav>
 	</header>
 
@@ -69,42 +72,12 @@
 		<aside class="grid col-one-quarter mq2-col-full">
 			<p class="mbottom">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi commodo, ipsum sed pharetra gravida, orci magna rhoncus neque, id pulvinar odio lorem non turpis.
 			</p>
-			<menu>
-				<ul>
-					<li><a href="#navteam" class="arrow">Our team</a></li>
-					<li><a href="#navphilo" class="arrow">Our philosophy</a></li>
-					<li><a href="#navplace" class="arrow">Our place</a></li>
-					<li><a href="#navother" class="arrow">Our lorem</a></li>
-				</ul>
-			</menu>
+			
 		</aside>
 		
 		<section class="grid col-three-quarters mq2-col-full">
 			<img src="img/Colin_Gerber_Resume.png" alt="" class="resume">
 			
-			<article id="navteam">
-			<h2>Our team</h2>
-			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi commodo, ipsum sed pharetra gravida, orci magna rhoncus neque, id pulvinar odio lorem non turpis. Nullam sit amet enim. Suspendisse id velit vitae ligula volutpat condimentum. Aliquam erat volutpat. Sed quis velit.</p>
-			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi commodo, ipsum sed pharetra gravida, orci magna rhoncus neque, id pulvinar odio lorem non turpis. Nullam sit amet enim. Suspendisse id velit vitae ligula volutpat condimentum. Aliquam erat volutpat. Sed quis velit.</p>
-			</article>
-			
-			<article id="navphilo">
-			<h2>Our philosophy</h2>
-			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi commodo, ipsum sed pharetra gravida, orci magna rhoncus neque, id pulvinar odio lorem non turpis. Nullam sit amet enim. Suspendisse id velit vitae ligula volutpat condimentum. Aliquam erat volutpat. Sed quis velit.</p>
-			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi commodo, ipsum sed pharetra gravida, orci magna rhoncus neque, id pulvinar odio lorem non turpis. Nullam sit amet enim. Suspendisse id velit vitae ligula volutpat condimentum. Aliquam erat volutpat. Sed quis velit.</p>
-			</article>
-			
-			<article id="navplace">
-			<h2>Our place</h2>
-			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi commodo, ipsum sed pharetra gravida, orci magna rhoncus neque, id pulvinar odio lorem non turpis. Nullam sit amet enim. Suspendisse id velit vitae ligula volutpat condimentum. Aliquam erat volutpat. Sed quis velit.</p>
-			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi commodo, ipsum sed pharetra gravida, orci magna rhoncus neque, id pulvinar odio lorem non turpis. Nullam sit amet enim. Suspendisse id velit vitae ligula volutpat condimentum. Aliquam erat volutpat. Sed quis velit.</p>
-			</article>
-					
-			<article id="navother">
-			<h2>Our lorem</h2>
-			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi commodo, ipsum sed pharetra gravida, orci magna rhoncus neque, id pulvinar odio lorem non turpis. Nullam sit amet enim. Suspendisse id velit vitae ligula volutpat condimentum. Aliquam erat volutpat. Sed quis velit.</p>
-			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi commodo, ipsum sed pharetra gravida, orci magna rhoncus neque, id pulvinar odio lorem non turpis. Nullam sit amet enim. Suspendisse id velit vitae ligula volutpat condimentum. Aliquam erat volutpat. Sed quis velit.</p>
-			</article>
 		
 		</section>
 		
@@ -128,10 +101,10 @@
 	<nav class="grid col-one-third ">
 		<ul>
 			<li><a href="index.html">Home</a></li>
-			<li><a href="about.html">Resume</a></li>
+			<li><a href="resume.html">Resume</a></li>
 			<li><a href="works.html">Portfolio</a></li>
-			<li><a href="services.html">Services</a></li>
-			<li><a href="blog.html">Blog</a></li>
+			<!-- <li><a href="services.html">Services</a></li>
+			<li><a href="blog.html">Blog</a></li> -->
 			<li><a href="contact.html">Contact</a></li>
 		</ul>
 	</nav>
