--- a/work1.html
+++ b/work1.html
@@ -14,6 +14,9 @@
 
 	<meta name="viewport" content="width=device-width">
 	
+	<meta name="description" content="Colin Gerber's personal website. Resume and portfolio.">
+    <meta name="author" content="Colin Gerber">
+
 	
 	<title>PROJECT // Colin Gerber</title>
 	
@@ -45,7 +48,7 @@
 		<nav class="fright">
 			<ul>
 				<li><a href="index.html">Home</a></li>
-				<li><a href="about.html">Resume</a></li>
+				<li><a href="resume.html">Resume</a></li>
 			</ul>
 			<ul>
 				<li><a href="works.html" class="navactive">Portfolio</a></li>
@@ -139,7 +142,7 @@
 		<nav class="grid col-one-third ">
 			<ul>
 				<li><a href="index.html">Home</a></li>
-				<li><a href="about.html">Resume</a></li>
+				<li><a href="resume.html">Resume</a></li>
 				<li><a href="works.html">Portfolio</a></li>
 				<li><a href="services.html">Services</a></li>
 				<li><a href="blog.html">Blog</a></li>
