--- a/works.html
+++ b/works.html
@@ -50,7 +50,7 @@
 				<li><a href="about.html">Resume</a></li>
 			</ul>
 			<ul>
-				<li><a href="works.html" class="navactive">Works</a></li>
+				<li><a href="works.html" class="navactive">Portfolio</a></li>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 			<!-- <ul>
@@ -200,7 +200,7 @@
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="about.html">About</a></li>
-				<li><a href="works.html">Works</a></li>
+				<li><a href="works.html">Portfolio</a></li>
 				<!-- <li><a href="services.html">Services</a></li>
 				<li><a href="blog.html">Blog</a></li> -->
 				<li><a href="contact.html">Contact</a></li>
