--- a/censusmapper.html
+++ b/censusmapper.html
@@ -72,7 +72,7 @@
 
         <aside class="grid col-one-quarter mq2-col-one-third mq3-col-full">
 
-        <p class="mbottom">This is a website that maps census data that was created for a I School class project.
+        <p class="mbottom">This is a website that maps census data that was created for an I School class project.
         </p>
         
         <h6>Technology</h6>
@@ -113,7 +113,7 @@
             <img src="img/Census_Mapper_Thumb.jpg" alt="" >
             </a>
             <figcaption>
-                <p>This is a screen shot of the map making page of the website. You can choose a variety of differnt census statisticas an visualize them on a map of the US.</p>
+                <p>This is a screen shot of the map making page of the website. You can choose a variety of different census statistics and visualize them on a map of the US.</p>
             </figcaption>
         </figure>
     
