--- a/clinicaldata.html
+++ b/clinicaldata.html
@@ -72,7 +72,7 @@
 
         <aside class="grid col-one-quarter mq2-col-one-third mq3-col-full">
 
-        <p class="mbottom">This project visualizes the AACT clinical data. Specifically looking at HIV clinical studies and how the studies and subjects have changed over time.
+        <p class="mbottom">This project visualizes the AACT clinical data; specifically looking at HIV clinical studies and how the studies and subjects have changed over time.
         </p>
         
         <!-- <h6>Details</h6>
