--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 			<h2>About Me</h2>
 			<p>I am currently a graduate student at the I School at UC Berkeley studying big data.</p>
 
-            <p>Before Berkeley I worked in a Neurophysiological Pharmacology Lab at the National Institute of Neurological Disease and Stroke at the National Institutes of Health. I graduated with a B.S. in Neuroscience from University of California, Santa Barbara.</p>
+            <p>Before Berkeley I worked in a Neurophysiological Pharmacology Lab at the National Institute of Neurological Disease and Stroke at the National Institutes of Health. I graduated with a B.S. in Neuroscience from the University of California, Santa Barbara.</p>
 
             <p>Playing water polo is my passion and I have been competitively playing water polo since 2003.
 			</p>
@@ -88,7 +88,7 @@
 		                 <figcaption>
 		                 	<div>
 		                 	<h5>Data Visualization</h5>
-		                 	<p>A chord chart of interaction between NE DC Bike Share stations.</p>
+		                 	<p>A chord chart of the interaction between NE DC Bike Share stations.</p>
 		                 	</div>
 		                 </figcaption>
 		             	</figure>
