--- a/nuclearforensics.html
+++ b/nuclearforensics.html
@@ -72,7 +72,7 @@
 
         <aside class="grid col-one-quarter mq2-col-one-third mq3-col-full">
 
-        <p class="mbottom">This project was for a Homeland Security Fellowship in a Nuclear forensics lab and the University of California, Berkeley.
+        <p class="mbottom">This project was for a Homeland Security Fellowship in a Nuclear forensics lab at the University of California, Berkeley.
         </p>
         
         <h6>Technology</h6>
