--- a/ploscloudexplorer.html
+++ b/ploscloudexplorer.html
@@ -72,7 +72,7 @@
 
         <aside class="grid col-one-quarter mq2-col-one-third mq3-col-full">
 
-        <p class="mbottom">A web app that enables people to explore the PLOS taxonomy. Each subject in the taxonomy will be represented by word cloud created from related papers abstracts.
+        <p class="mbottom">A web app that enables people to explore the PLOS taxonomy. Each subject in the taxonomy will be represented by a word cloud created from related papers abstracts.
         </p>
         
         <!-- <h6>Details</h6>
