--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 	<header class="grid col-full">
 			<hr>
 			<p class="fleft">Portfolio</p>
-			<a href="works.html" class="arrow fright">see more projects</a>
+			<a href="works.html" class="thumbtext fright">see more projects</a>
 		</header>
 	
 			<figure class="grid col-one-quarter mq2-col-one-half">
@@ -162,7 +162,7 @@
 				<span class="zoom"></span>
 				</a>
 				<figcaption>
-					<a href="neuroscience.html" class="arrow">Neuroscience</a>
+					<a href="neuroscience.html" class="thumbtext">Neuroscience</a>
 					<p>Parkinson's disease research at the NIH.</p>
 				</figcaption>
 			</figure>
@@ -173,7 +173,7 @@
 				<span class="zoom"></span>
 				</a>
 				<figcaption>
-					<a href="nuclearforensics.html" class="arrow">Nuclear Forensics</a>
+					<a href="nuclearforensics.html" class="thumbtext">Nuclear Forensics</a>
 					<p>Nuclear forensics research project.</p>
 				</figcaption>
 			</figure>
@@ -184,7 +184,7 @@
 				<span class="zoom"></span>
 				</a>
 				<figcaption>
-					<a href="dataviz.html" class="arrow">Data Visualizations</a>
+					<a href="dataviz.html" class="thumbtext">Data Visualizations</a>
 					<p>Visualization from assorted projects.</p>
 				</figcaption>
 			</figure>
@@ -195,7 +195,7 @@
 				<span class="zoom"></span>
 				</a>
 				<figcaption>
-					<a href="censusmapper.html" class="arrow">Census Mapper</a>
+					<a href="censusmapper.html" class="thumbtext">Census Mapper</a>
 					<p>A website for mapping census data.</p>
 				</figcaption>
 			</figure>
@@ -205,7 +205,7 @@
     <header class="grid col-full">
             <hr>
             <p class="fleft">Portfolio</p>
-            <a href="works.html" class="arrow fright">see more projects</a>
+            <a href="works.html" class="thumbtext fright">see more projects</a>
         </header>
     
             <figure class="grid col-one-quarter mq2-col-one-half">
@@ -214,7 +214,7 @@
                 <span class="zoom"></span>
                 </a>
                 <figcaption>
-                    <a href="peacecorps.html" class="arrow">Peace Corps Hackathon</a>
+                    <a href="peacecorps.html" class="thumbtext">Peace Corps Hackathon</a>
                     <p>Website created for the Peace Corps.</p>
                 </figcaption>
             </figure>
@@ -225,7 +225,7 @@
                 <span class="zoom"></span>
                 </a>
                 <figcaption>
-                    <a href="ploscloudexplorer.html" class="arrow">PLOS Cloud Explorer</a>
+                    <a href="ploscloudexplorer.html" class="thumbtext">PLOS Cloud Explorer</a>
                     <p>A web app for exploring PLOS.</p>
                 </figcaption>
             </figure>
@@ -236,7 +236,7 @@
                 <span class="zoom"></span>
                 </a>
                 <figcaption>
-                    <a href="clinicaldata.html" class="arrow">Clinical Data Visualizations</a>
+                    <a href="clinicaldata.html" class="thumbtext">Clinical Data Visualizations</a>
                     <p>Visualizing clinical data.</p>
                 </figcaption>
             </figure>
@@ -247,7 +247,7 @@
                 <span class="zoom"></span>
                 </a>
                 <figcaption>
-                    <a href="#" class="arrow">More</a>
+                    <a href="#" class="thumbtext">More</a>
                     <p>In progress.</p>
                 </figcaption>
             </figure>
