update links and text in about me

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 		
 		<div class="grid col-one-half mq2-col-full aboutme">
 			<h2>About Me</h2>
-			<p>I am currently a graduate student at the I School at UC Berkeley studying big data.</p>
+			<p>I am currently getting my <a href="http://www.ischool.berkeley.edu/">Masters in Information Management and Systems (MIMS)</a> from the I School at UC Berkeley.</p>
 
-            <p>Before Berkeley I worked in a Neurophysiological Pharmacology Lab at the National Institute of Neurological Disease and Stroke at the National Institutes of Health. I graduated with a B.S. in Neuroscience from the University of California, Santa Barbara.</p>
+            <p>Before Berkeley I worked in a <a href="http://www.ninds.nih.gov/research/labs/68.htm">Neurophysiological Pharmacology Lab</a> at the National Institute of Neurological Disease and Stroke at the National Institutes of Health. My undergraduate degree was a B.S. in Neuroscience from the University of California, Santa Barbara.</p>
 
             <p>Playing water polo is my passion and I have been competitively playing water polo since 2003.
 			</p>
