resume text fix

--- a/resume.html
+++ b/resume.html
@@ -68,12 +68,12 @@
 		</header>
 
 		
-		
-		<aside class="grid col-one-quarter mq2-col-full">
-			<p class="mbottom">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi commodo, ipsum sed pharetra gravida, orci magna rhoncus neque, id pulvinar odio lorem non turpis.
+		<!-- Put a link for download here. -->
+		<!-- <aside class="grid col-one-quarter mq2-col-full">
+			<p class="mbottom">
 			</p>
 			
-		</aside>
+		</aside> -->
 		
 		<section class="grid col-three-quarters mq2-col-full">
 			<img src="img/Colin_Gerber_Resume.png" alt="" class="resume">
