text on resume page

--- a/resume.html
+++ b/resume.html
@@ -69,11 +69,11 @@
 
 		
 		<!-- Put a link for download here. -->
-		<!-- <aside class="grid col-one-quarter mq2-col-full">
-			<p class="mbottom">
+		<aside class="grid col-one-quarter mq2-col-full">
+			<p class="mbottom">Last updated 04/2014
 			</p>
 			
-		</aside> -->
+		</aside>
 		
 		<section class="grid col-three-quarters mq2-col-full">
 			<img src="img/Colin_Gerber_Resume.png" alt="" class="resume">
