fix typo on home page

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 		                     <figcaption>
 		                     	<div>
 		                     	<h5>Nuclear Forensics</h5>
-		                     	<p>A Python program to match unknown nuclear fuel cells to know nuclear reactors.</p>
+		                     	<p>A Python program to match unknown nuclear fuel cells to known nuclear reactors.</p>
 		                     	</div>
 		                     </figcaption>
 		                 	</figure>
