--- a/works.html
+++ b/works.html
@@ -47,7 +47,7 @@
 		<nav class="fright">
 			<ul>
 				<li><a href="index.html">Home</a></li>
-				<li><a href="about.html">Resume</a></li>
+				<li><a href="resume.html">Resume</a></li>
 			</ul>
 			<ul>
 				<li><a href="works.html" class="navactive">Portfolio</a></li>
@@ -199,7 +199,7 @@
 		<nav class="grid col-one-third ">
 			<ul>
 				<li><a href="index.html">Home</a></li>
-				<li><a href="about.html">About</a></li>
+				<li><a href="resume.html">About</a></li>
 				<li><a href="works.html">Portfolio</a></li>
 				<!-- <li><a href="services.html">Services</a></li>
 				<li><a href="blog.html">Blog</a></li> -->
