--- a/blog.html
+++ b/blog.html
@@ -14,8 +14,8 @@
 
 	<meta name="viewport" content="width=device-width">
 	
-	<meta name="description" content="Designa Studio, a HTML5 / CSS3 template.">
-	<meta name="author" content="Sylvain Lafitte, Web Designer, sylvainlafitte.com">
+	<!-- <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"> -->
+	<link rel="shortcut icon" type="image/png" href="faviconcg.png">
 	
 	<title>BLOG // Designa Studio</title>
 	
