--- a/contact.html
+++ b/contact.html
@@ -20,8 +20,8 @@
 	
 	<title>CONTACT// Colin Gerber</title>
 	
-	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-	<link rel="shortcut icon" type="image/png" href="favicon.png">
+	<!-- <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"> -->
+	<link rel="shortcut icon" type="image/png" href="faviconcg.png">
 	
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/style.css">
