add svg resume instead of png

--- a/resume.html
+++ b/resume.html
@@ -87,7 +87,7 @@
 		</aside>
 		
 		<section class="grid col-three-quarters mq2-col-full">
-			<img src="img/Colin_Gerber_Resume.png" alt="" class="resume">
+			<img src="img/Colin_Gerber_Resume.svg" alt="" class="resume">
 			
 		
 		</section>
