add resume pdf download

--- a/resume.html
+++ b/resume.html
@@ -83,7 +83,12 @@
 		<aside class="grid col-one-quarter mq2-col-full">
 			<p class="mbottom">Last updated 04/2014
 			</p>
-			
+		
+		<p>
+			<a class="pdf-download" href="img/Colin_Gerber_Resume.pdf">
+				<img src="img/pdf_icon_small.gif" alt=""> Download PDF</a>
+		</p>
+
 		</aside>
 		
 		<section class="grid col-three-quarters mq2-col-full">
