update social icons

--- a/contact.html
+++ b/contact.html
@@ -86,23 +86,27 @@
 
 			<p class="mbottom">If you have any questions let me know.</p>
 			
-			<!-- <address class="mbottom">
-				<h5>DESIGNA studio </h5>
-				3615 Fake Street <br >
-				Level 5, Door 123 <br >
-				1010 WHATEVER<br >
-				<a href="http://maps.google.com">Get directions</a>
-			</address>
+			 
 		
 			<p class="mbottom">
-				00 77 66 55 33<br >
-				00 77 66 55 33</p> -->
-			<p class="mbottom">
-				<a href="https://www.linkedin.com/pub/colin-gerber/28/981/999">LinkedIn</a><br>
-	            <a href="https://github.com/cmgerber">Github</a><br>
-	            <a href="http://www.quora.com/Colin-Gerber">Quora</a><br>
-				<a href="https://twitter.com/Cmgerber">Twitter</a><br>
-				<a href="https://plus.google.com/+ColinGerber">Google+</a><br>
+
+		        <ul class="social-buttons" id="rotate">
+				  <li>
+				    <a href="https://twitter.com/Cmgerber" class="soc zocial-twitter"></a>
+				  </li>
+				  <li>
+				    <a href="http://www.quora.com/Colin-Gerber" class="soc zocial-quora"></a>
+				  </li>
+				  <li>
+				    <a href="https://github.com/cmgerber" class="soc zocial-github"></a>
+				  <li>
+				    <a href="https://plus.google.com/+ColinGerber" class="soc zocial-googleplus"></a>
+				  </li>
+				  <li>
+				    <a href="https://www.linkedin.com/pub/colin-gerber/28/981/999" class="soc zocial-linkedin"></a>
+				  </li>
+				</ul>
+
 			</p>
 			
 		
@@ -133,7 +137,7 @@
 			</form>
 		</section>	
 		
-	</div> <!--main-->
+	</div> <!--main
 
 <div class="divide-top">
 <p class="fleft">Connect</p>
