add to meta description

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
 	<meta name="viewport" content="width=device-width">
 	
-    <meta name="description" content="Colin Gerber's personal website. Resume and portfolio.">
+    <meta name="description" content="Colin Gerber's personal website. Resume and portfolio.
+     Projects including Neuroscience research, Nuclear forensics, and Data visualizations.">
     <meta name="author" content="Colin Gerber">
 	
 	<title>Colin Gerber</title>
