update side bars on projects

--- a/censusmapper.html
+++ b/censusmapper.html
@@ -101,7 +101,14 @@
         <h6>Links</h6>
         <ul class="mbottom">
             <li><a href="http://groups.ischool.berkeley.edu/censusmapper/">Live website</a></li>
-            <li><a href="hhttps://github.com/cmgerber/CensusMapper">Github Repository</a></li>
+            <li><a href="https://github.com/cmgerber/CensusMapper">Github Repository</a></li>
+        </ul>
+
+        <h6>Other Contributors</h6>
+        <ul class="halfmbottom">
+            <li>Jason Ost</li>
+            <li>Peter Swigert</li>
+            <li>Sandra Lee</li>
         </ul>
         
         
