--- a/clinicaldata.html
+++ b/clinicaldata.html
@@ -101,6 +101,17 @@
             <li>JavaScript</li>
             <li>mySQL</li>
         </ul>
+
+        <h6>Links</h6>
+        <ul class="mbottom">
+            <li><a href="https://github.com/jasonost/clinicaltrials">Github Repository</a></li>
+        </ul>
+
+        <h6>Other Contributors</h6>
+        <ul class="halfmbottom">
+            <li>Jason Ost</li>
+            <li>Anobel Odisho</li>
+        </ul>
         
         <!-- <h6>Links</h6>
         <ul class="mbottom">
