--- a/ploscloudexplorer.html
+++ b/ploscloudexplorer.html
@@ -101,6 +101,17 @@
             <li>JavaScript</li>
             <li>mySQL</li>
         </ul>
+
+        <h6>Links</h6>
+        <ul class="mbottom">
+            <li><a href="https://github.com/cmgerber/PLOS_Cloud_Explorer">Github Repository</a></li>
+        </ul>
+
+        <h6>Other Contributors</h6>
+        <ul class="halfmbottom">
+            <li>Anna Swigart</li>
+            <li>Akos Kokai</li>
+        </ul>
         
         <!-- <h6>Links</h6>
         <ul class="mbottom">
