fix css pointer

--- a/ploscloudexplorerlive.html
+++ b/ploscloudexplorerlive.html
@@ -9,7 +9,7 @@
         <script src="js_PLOS/dimple.v2.0.0.min.js"></script>
         <script src="js_PLOS/d3.layout.cloud.js"></script>
         <script src="js_PLOS/colorbrewer.js"></script>
-		<link rel="stylesheet" type="text/css" href="css_plos/style.css" />
+		<link rel="stylesheet" type="text/css" href="css_PLOS/style.css" />
 	</head>
 <body>
     <div id="wrapper">
