--- a/ploscloudexplorerlive.html
+++ b/ploscloudexplorerlive.html
@@ -3,13 +3,25 @@
 	<head>
 		<meta charset="utf-8">
         <title>PLOS Cloud Explorer</title>
-        <link rel="icon" type="image/png" href="img/favicon.png">
+        <link rel="shortcut icon" type="image/png" href="faviconcg.png">
 		<script type="text/javascript" src="js_PLOS/jquery-1.10.2.min.js"></script>
 		<script type="text/javascript" src="js_PLOS/d3.min.js"></script>
         <script src="js_PLOS/dimple.v2.0.0.min.js"></script>
         <script src="js_PLOS/d3.layout.cloud.js"></script>
         <script src="js_PLOS/colorbrewer.js"></script>
 		<link rel="stylesheet" type="text/css" href="css_PLOS/style.css" />
+
+        <!-- Google Analytics code -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-49940504-1', 'colingerber.com');
+      ga('send', 'pageview');
+
+    </script>
 	</head>
 <body>
     <div id="wrapper">
