--- a/works.html
+++ b/works.html
@@ -153,7 +153,7 @@
 
 	            <figure class="grid col-one-third mq1-col-one-half mq2-col-one-third mq3-col-full work_1">
 	                <a href="ploscloudexplorer.html">
-	                <img src="img/work_in_progress.jpg" alt="" class="thumb">
+	                <img src="img/PLOS_Cloud_Explorer_Thumb.jpg" alt="" class="thumb">
 	                <span class="zoom"></span>
 	                </a>
 	                <figcaption>
