--- a/ploscloudexplorerlive.html
+++ b/ploscloudexplorerlive.html
@@ -24,10 +24,14 @@
     </script>
 	</head>
 <body>
+    <div id="tutorial">
+    </div>
     <div id="wrapper">
 
         <div id ="header">
             <h2 id="main-title">PLOS Cloud Explorer</h2>
+            <div id="headerbuttons">
+            </div>
         </div>
      <!--   <h5 id="about-link"><a href ="https://github.com/cmgerber/PLOS_Cloud_Explorer/blob/master/README.md">About</a></h5> -->
         
