added linked thumbnail

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
 	<meta name="viewport" content="width=device-width">
+
+    <!-- linked thumbnail image -->
+    <meta property="og:image" content="img/Prof_Pic.jpg"/>
 	
     <meta name="description" content="Colin Gerber's personal website. Resume and portfolio.
      Projects including Neuroscience research, Nuclear forensics, and Data visualizations.">
