--- a/neuroscience.html
+++ b/neuroscience.html
@@ -148,6 +148,7 @@
             
             <article id="navabstracts">
             <h2>Abstracts</h2>
+            <li><a href=>SFN 2014 - Excessive synchronization in basal ganglia-thalamocortical circuits in the hemiparkinsonian rat during bradykinesia and dyskinesia</a></li>
             <li><a href="http://www.abstractsonline.com/Plan/ViewAbstract.aspx?sKey=252a3358-bce4-4ce9-9690-a68d5b60d8c3&cKey=643af5cc-0c0c-491f-81c1-33d5dc9bbaf7&mKey=%7b8D2A5BEC-4825-4CD6-9439-B42BB151D1CF%7d">SFN 2013 - High gamma cortical activity in the development of L-dopa-induced dyskinesia in a rodent model of Parkinson’s disease.</a></li>
             <li><a href="http://www.abstractsonline.com/Plan/ViewAbstract.aspx?sKey=252a3358-bce4-4ce9-9690-a68d5b60d8c3&cKey=c1d5d053-8c6f-4cf6-8390-760ea228804c&mKey=%7b8D2A5BEC-4825-4CD6-9439-B42BB151D1CF%7d">SFN 2013 - Motor cortex and prefrontal cortex show coherence with subthalamic nucleus activity in different beta and gamma frequency ranges in awake behaving hemiparkinsonian rats.</a></li>
             <li><a href="http://www.abstractsonline.com/Plan/ViewAbstract.aspx?sKey=252a3358-bce4-4ce9-9690-a68d5b60d8c3&cKey=a0d31ae5-8272-43ad-bd75-b710331bd410&mKey=%7b8D2A5BEC-4825-4CD6-9439-B42BB151D1CF%7d">SFN 2013 - Excessive oscillatory dynamics in the cortico-striato-nigral network in rodent models of Parkinson's disease and L-dopa-induced dyskinesia.</a></li>
