--- a/ploscloudexplorerlive.html
+++ b/ploscloudexplorerlive.html
@@ -2,6 +2,11 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+
+        <meta name="description" content="A visualization that enables you to explore the PLOS subject hierarchy and relations
+        between different subject areas across all the PLOS journals.">
+        <meta name="author" content="Colin Gerber">
+
         <title>PLOS Cloud Explorer</title>
         <link rel="shortcut icon" type="image/png" href="faviconcg.png">
 		<script type="text/javascript" src="js_PLOS/jquery-1.10.2.min.js"></script>
