add project to clinicaldata

--- a/clinicaldata.html
+++ b/clinicaldata.html
@@ -105,6 +105,7 @@
         <h6>Links</h6>
         <ul class="mbottom">
             <li><a href="https://github.com/jasonost/clinicaltrials">Github Repository</a></li>
+            <li><a href="http://groups.ischool.berkeley.edu/clinicaltrials/">Live Site</a></li>
         </ul>
 
         <h6>Other Contributors</h6>
@@ -126,11 +127,11 @@
         <section class="grid col-three-quarters mq2-col-two-thirds mq3-col-full">
     
         <figure class="">
-            <a href="#" >
-            <img src="img/work_in_progress.jpg" alt="" >
+            <a href="http://groups.ischool.berkeley.edu/clinicaltrials/" >
+            <img src="img/ClinicaltrialsThumb.jpg" alt="" >
             </a>
             <figcaption>
-                <p>Project in progress.</p>
+                <p>We created a web app that allows users to explore the ClinicalTrials.gov registry and better understand the clinical trials landscape. The visualization was developed to allow comparisons in the number of trials conducted and patients enrolled between different disease categories, and to compare the sponsor distribution, study phase, and completion status with each study grouping. The target user is someone with pre-existing interest in clinical trials and entry-level domain knowledge, such as clinical investigators, policy analysts, funding agencies, and journalists.</p>
             </figcaption>
         </figure>
     
