--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
         
             <figure class="grid col-one-quarter mq2-col-one-half mq3-col-full work_1 mq1-col-one-half">
                 <a href="clinicaldata.html">
-                <img src="img/work_in_progress.jpg" alt="" class="thumb">
+                <img src="img/ClinicaltrialsThumb.jpg" alt="" class="thumb">
                 <span class="zoom"></span>
                 </a>
                 <figcaption>
