--- a/works.html
+++ b/works.html
@@ -164,7 +164,7 @@
 	        
 	            <figure class="grid col-one-third mq1-col-one-half mq2-col-one-third mq3-col-full work_1">
 	                <a href="clinicaldata.html">
-	                <img src="img/work_in_progress.jpg" alt="" class="thumb">
+	                <img src="img/ClinicaltrialsThumb.jpg" alt="" class="thumb">
 	                <span class="zoom"></span>
 	                </a>
 	                <figcaption>
