--- a/clinicaldata.html
+++ b/clinicaldata.html
@@ -84,7 +84,7 @@
 
         <aside class="grid col-one-quarter mq2-col-one-third mq3-col-full">
 
-        <p class="mbottom">This project visualizes the AACT clinical data; specifically looking at HIV clinical studies and how the studies and subjects have changed over time.
+        <p class="mbottom">This project visualizes the AACT clinical data. It was done as a project in a Data Vizualization class at the I School at Berkeley.
         </p>
         
         <!-- <h6>Details</h6>
