Added PLOS blog post link.

--- a/ploscloudexplorer.html
+++ b/ploscloudexplorer.html
@@ -105,6 +105,7 @@
         <ul class="mbottom">
             <li><a href="https://github.com/cmgerber/PLOS_Cloud_Explorer">Github Repository</a></li>
             <li><a href="ploscloudexplorerlive.html">Live Site</a></li>
+            <li><a href="http://blogs.plos.org/tech/delving-subject-areas-plos-cloud-explorer/">PLOS Blog Post</a></li>
         </ul>
 
         <h6>Other Contributors</h6>
@@ -131,6 +132,7 @@
             </a>
             <figcaption>
                 <p>The open access (OA) publishing movement promises to enrich the public domain with knowledge and scholarship previously confined to restricted-access journals. Despite the major potential benefits of OA, and of the internet in general, to the public understanding of science, academic journals are still largely inaccessible on a cultural level. Here we focus on the challenge of getting a summary-level picture of a particular area of research. Our goal was to create an experience that allows both researchers and curious members of the general public to explore research trends and interactions between research topics.</p>
+                <p>Read more about the project on our <a href="http://blogs.plos.org/tech/delving-subject-areas-plos-cloud-explorer/">guest Blog post</a> on the PLOS Tech blog.</p>
             </figcaption>
         </figure>
     
