fix formatting of social buttons

--- a/dataviz.html
+++ b/dataviz.html
@@ -471,7 +471,7 @@ path.chord {
 </div>
 
 <!-- Javascript - jQuery http://code.jquery.com/jquery.min.js-->
-<script src="js/jquery-1.7.2.min.js"></script>
+<!-- <script src="js/jquery-1.7.2.min.js"></script> -->
 <script>window.jQuery || document.write('<script src="js/jquery-1.7.2.min.js"><\/script>')</script>
 
 <!--[if (gte IE 6)&(lte IE 8)]>
