text length fix

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                 </a>
                 <figcaption>
                     <a href="works.html" class="thumbtext">Explore More Projects</a>
-                    <p>Explore more projects that are either in progress of completed in the past.</p>
+                    <p>Explore more projects in my Portfolio</p>
                 </figcaption>
             </figure>
     </section>
