--- a/index.html
+++ b/index.html
@@ -279,13 +279,13 @@
             </figure>
 
             <figure class="grid col-one-quarter mq2-col-one-half mq3-col-full work_1 mq1-col-one-half">
-                <a href="works.html">
-                <img src="img/work_in_progress.jpg" alt="" class="thumb">
+                <a href="assorted_projects.html">
+                <img src="img/earthquake_thumb.jpg" alt="" class="thumb">
                 <span class="zoom"></span>
                 </a>
                 <figcaption>
-                    <a href="works.html" class="thumbtext">Explore More Projects</a>
-                    <p>Explore more projects in my Portfolio</p>
+                    <a href="assorted_projects.html" class="thumbtext">Assorted Projects</a>
+                    <p>Explore Assorted Small Projects</p>
                 </figcaption>
             </figure>
     </section>
