add personal page and travels map page

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
             <p>Before Berkeley I worked in a <a href="http://www.ninds.nih.gov/research/labs/68.htm">Neurophysiological Pharmacology Lab</a> at the National Institute of Neurological Disease and Stroke at the National Institutes of Health. My undergraduate degree was a B.S. in Neuroscience from the University of California, Santa Barbara.</p>
 
-            <p>Playing water polo is my passion and I have been competitively playing water polo since 2003.
+            <p>Playing water polo is my passion and I have been competitively playing water polo since 2003. I also love to travel and started <a href="personal.html">making a map</a> to track my travels.
 			</p>
 		</div>
 
