update to travel page

--- a/travels.html
+++ b/travels.html
@@ -19,8 +19,14 @@
     <body>
 
         <div id="map"></div>
+        <h3 id='tableTitle'>Places Lindsay and Colin have Been</h3>
+        <div id='filters'>
+            <button type="button" id='LindsColin' class='btn'>Linds and Colin</button>
+            <button type="button" id='Colin' class='btn'>Colin</button>
+            <button type="button" id='Linds' class='btn'>Linds</button>
+            <button type="button" id='ShowAll' class='btn'>Show All</button>
+        </div>
         <div id='eqTable'>
-            <h3 id='tableTitle'>Places I've Been</h3>
         </div>
 
     </body>
