update contact form

--- a/contact.html
+++ b/contact.html
@@ -116,7 +116,7 @@
 			<h2>Send me a message</h2>
 			<p class="warning">Include your name, email and message below.</p>
 
-			<form id="contact_form" class="contact_form" action="contact.php" method="post" name="contact_form">
+			<form id="contact_form" class="contact_form" action="contact_new.php" method="post" name="contact_form">
 				<ul>
 					<li>
 						<label for="name">Your name:</label>
@@ -137,9 +137,9 @@
 			</form>
 		</section>
 
-	</div> <!--main
+	</div>
 
-<div class="divide-top">
+<!-- <div class="divide-top">
 <p class="fleft">Connect</p>
 <footer class="grid-wrap">
 	<ul class="grid col-one-third social">
@@ -160,17 +160,17 @@
 			<li><a href="resume.html">Resume</a></li>
 			<li><a href="works.html">Portfolio</a></li>
 			<li><a href="contact.html">Contact</a></li>
-			<!-- <li><a href="services.html">Services</a></li>
-			<li><a href="blog.html">Blog</a></li> -->
+			<li><a href="services.html">Services</a></li>
+			<li><a href="blog.html">Blog</a></li>
 
 		</ul>
 	</nav>
 </footer>
-</div>
+</div> -->
 
 </div>
 
-<!-- Javascript - jQuery -->
+<!-- Javascript - jQuery
 <script src="http://code.jquery.com/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/jquery-1.7.2.min.js"><\/script>')</script>
 
